#117 | unit test coverage for the common module